<resources>

    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">我的诗词</string>

    <string name="action_settings">设置</string>
    <string name="action_cancel">取消</string>
    <string name="action_compose">创作</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_delete">删除</string>
    <string name="action_update">修改</string>

    <string name="title_activity_poem">我的诗词</string>
    <string name="title_activity_compose">创作</string>
    <string name="title_activity_detail">诗词详情</string>
    <string name="title_activity_detail_draft">草稿详情</string>
    <string name="title_activity_detail_rhythm">格律详情</string>

    <string name="hint_et_title">主题</string>
    <string name="hint_et_subtitle">副题</string>
    <string name="hint_et_author">作者</string>
    <string name="hint_et_content">正文内容</string>
    <string name="hint_et_created">创作日期</string>
    <string name="hint_search">题目|内容</string>
    <string name="hint_search_rhythm">格律诗|词牌名</string>

    <string name="text_btn_draft">存为草稿</string>
    <string name="text_btn_compose">保存创作</string>
    <string name="text_btn_pick_rhythm">选择格律</string>

    <string name="tip_select_rhythm">选择格律</string>
    <string name="tip_share_to">分享到：</string>
    <string name="tip_default_title">无题</string>
    <string name="tip_no_content">正文内容不能空</string>
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_delete_fail">删除失败</string>
    <string name="tip_fail">操作失败</string>
    <string name="tip_draft_success">成功存为草稿</string>
    <string name="tip_compose_success">成功保存创作</string>

    <string name="empty_text_fragment_drafts">没有草稿</string>
    <string name="empty_text_fragment_poems">没有诗词</string>
    <string name="empty_text_fragment_rhythm">没有格律</string>

    <string name="lorem">
        锦瑟无端五十弦，\n
        一弦一柱思华年。\n
        庄生晓梦迷蝴蝶，\n
        望帝春心托杜鹃。\n
        沧海月明珠有泪，\n
        蓝田日暖玉生烟。\n
        此情可待成追忆？\n
        只是当时已惘然。
    </string>

    <string name="hint">
        中仄平平中仄韵\n
        中平中仄仄平韵\n
        中平中仄平平仄\n
        中仄平平中仄韵\n
        中仄中平平仄仄\n
        中平中仄仄平韵\n
        中平中仄平平仄\n
        中仄平平中仄韵
    </string>


    <string name="tools_text_poem_title">锦瑟</string>
    <string name="tools_text_poem_subtitle">无副题</string>
    <string name="tools_text_poem_author">李商隐</string>
    <string name="tools_text_poem_content">@string/lorem</string>
    <string name="tools_text_poem_created">xxxx年xx月xx日</string>

    <string name="tools_text_rhythm_name">水调歌头</string>
    <string name="tools_text_rhythm_alias">元会曲、凯歌</string>
    <string name="tools_text_rhythm_count">40字</string>
    <string name="tools_text_rhythm_intro">双调九十五字，前段九句四平韵、两仄韵，后段十句四平韵、两仄韵</string>
    <string name="tools_text_rhythm_metre">
        ○●●○●,●●●○△\n●○○●○●,○●●○△\n●●○○○▲,●●○○●▲,○●●○△\n●●●○●,○●●○△\n●○●,○●●,●○△\n●○●●,○●○●●○△\n○●○○○▲,●●○○○▲,●●●○△\n●●○○●,○●●○△</string>
    <string name="tools_text_rhythm_sample">《水调歌头》（苏轼）\n明月几时有，把酒问青天。\n不知天上宫阙，今夕是何年。\n我欲乘风归去，又恐琼楼玉宇，高处不胜寒\n起舞弄清影，何事在人间。\n转朱阁，低绮户，照无眠。\n不应有恨，何事长向别时圆。\n人有悲欢离合，月有阴晴圆缺，此事古难全\n但愿人长久，千里共婵娟。</string>
    <string name="tools_text_rhythm_comment">此词前段第五、六句，后段第六、七句，间入两仄韵。按，刘仲芳词，“极目平沙千里，惟见雕弓白羽”、“堂有经纶贤相，边有纵横谋将”；叶梦得词，“分付平云千里，包卷骚人遗思”、“却叹从来贤士，如我与公多矣”；辛弃疾词，“好卷垂虹千尺，只放冰壶一色”、“寄语烟波旧侣，闻道蒪鲈正美”；段克己词，“神既来兮庭宇，飒飒西风吹雨”、“风外渊渊箫鼓，醉饱满城黎庶”，正与此同。但叶梦得词“里”、“思”、“士”、“矣”，段克己词“宇”、“雨”、“鼓”、“庶”，前后段同一韵，与此词前后各韵者，又微有别。此外，又有前段第五、六句押仄韵，后段不押者，或有后段第六、七句押仄韵，前段不押者，此则偶合，不复分体。</string>


    <string-array name="tab_title">
        <item>草稿</item>
        <item>诗词</item>
        <item>格律</item>
    </string-array>


</resources>
