<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fmf.mypoem.fragment.RhythmDetailFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="@string/tools_text_rhythm_name"/>

    <TextView
        android:id="@+id/tv_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="@string/tools_text_rhythm_alias"/>

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_alias"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="@string/tools_text_rhythm_intro"/>

    <TextView
        android:id="@+id/tv_metre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_intro"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="@string/tools_text_rhythm_metre"/>

    <TextView
        android:id="@+id/tv_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_metre"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/tools_text_rhythm_sample"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_sample"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="@string/tools_text_rhythm_comment"/>
</RelativeLayout>
