<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fmf.mypoem.fragment.PoemDetailFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="@string/tools_text_poem_title"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="@string/tools_text_poem_subtitle"
        />
<!--todo: textIsSelectable 只能让单个textview可选，不能多个一起选-->
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textIsSelectable="true"
        android:lineSpacingMultiplier="1.5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="@string/tools_text_poem_content"/>

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_content"
        android:text="@string/tools_text_poem_author"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/tv_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_author"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="@string/tools_text_poem_created"/>
</RelativeLayout>
